fix css to support word wrap for the code snippet; add read full error

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -557,3 +557,7 @@ body {
     }
   }
 }
+
+code {
+  white-space: pre-wrap !important;
+}
